--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "ecmascript-evaluator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "babel -d lib src",
     "test": "babel-tape-runner test/*.test.js"
   },
   "keywords": [],
