--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.1.21",
-    "babel-preset-es2015": "^6.1.18"
+    "babel": "^5.8.34",
+    "babel-core": "^5.8.34"
   },
   "devDependencies": {
-    "babel-cli": "^6.1.18",
-    "babel-tape-runner": "^1.3.0",
     "tape": "^4.2.2"
   }
 }
